fixed 6.0 pos on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,7 +278,7 @@ body {
     }
     .six-point-o h1 {
         font-size: 60vw;
-        bottom: 18vh;
+        bottom: 17vh;
     }
 }
 
